# Mivalta-flutter

./: .gitignore  .mcp.json  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
.cargo/: config.toml
.claude/: REVIEWER.md
.claude/hooks/: session-start.sh
.github/scripts/: claude_review.py
.github/workflows/: branch-janitor.yml  ci.yml  claude-review.yml  frb-drift-guard.yml  lineage-guard.yml  smoke-build.yml
android/app/: build.gradle.kts  proguard-rules.pro
assets/: compiled_tables.json
assets/debug/: demo_season.json
docs/: APADMI_HANDOFF.md  ARCHIVE_INDEX.md  AUDIT_BRIEF_UPDATE.md  AUDIT_REPORT_2026-06-14.md  BETA_BUILD_PACK.md  CONTINUITY_AND_MEMORY.md  DAY2_RUST_BRIDGE.md  DESIGN_BUILD_SPEC.md  DESIGN_DATA_CONTRACT.md  DISTRIBUTION_AND_TIERS.md  ENGINE_BRIEF_WORKOUT_LOAD.md  ENGINE_SURFACE_AND_FRONTEND_MAP.md  FOUNDER_FEEDBACK_2026-06-12.md  FRONTEND_FLOW_AND_STORIES.md  FRONTEND_HANDOFF.md  FRONTEND_HANDOVER.md  HOME_REDESIGN_BRIEF.md  IOS_BRINGUP_BRIEF.md  JOURNEY_SPEC.md  MAC_BATCH_RUNBOOK.md  MAC_BRIEF_3_READINESS_WRITEBACK.md  MAC_BRIEF_ADVISOR_LEAD_A.md  MAC_BRIEF_BETA_BATCH.md  MAC_BRIEF_DAILY_NOTIFICATION.md  MAC_BRIEF_ENGINE_REPIN.md  MAC_BRIEF_MERGE_RECONCILE.md  MAC_BRIEF_MODEL_LEARNING_SURFACE.md  MAC_BRIEF_N1_BETA.md  MAC_BRIEF_PRIVACY_TOGGLE.md  METRICS.md  MIVALTA_OVERVIEW.md  MVP1_BUILD_BRIEF.md  NEXT_BUILD_BRIEF.md  NEXT_UPDATE_V2_ADOPTIONS.md  PR136_UNBLOCK_BRIEF.md  QUALITY_CHARTER.md  READING_ORDER.md  RELEASE_CHECKLIST.md  SIMULATOR_AUDIT_REPORT.md  SIMULATOR_DEMO_DATA.md  (+6 more)
docs/archive/: AUDIT_BRIEF_UPDATE.md  DISTRIBUTION_AND_TIERS.md  ENGINE_SURFACE_AND_FRONTEND_MAP.md  MAC_BRIEF_ADVISOR_LEAD_A.md  MAC_BRIEF_MODEL_LEARNING_SURFACE.md  MAC_BRIEF_PRIVACY_TOGGLE.md  MIVALTA_OVERVIEW.md  MVP1_BUILD_BRIEF.md  NEXT_UPDATE_V2_ADOPTIONS.md  SIMULATOR_AUDIT_REPORT.md  UI_UX_DESIGN_IOS_ANDROID.md
docs/briefs/: DESIGN_BRIEF_2026-07-06_VOICE_AND_BACKUP.md  DESIGN_BRIEF_BACKUP_EXCLUSION.md  DESIGN_BRIEF_V6_COACH_VOICE.md  NEXT_BUILD_BRIEF.md  SIMULATOR_DEMO_DATA.md
docs/mac/: MAC_BRIEF_BENCHMARK_LOOP.md  MAC_BRIEF_FINISH_LINE.md  MAC_BRIEF_REALIZE_SEAM.md  MAC_BRIEF_VOICE_WIRING_TRAIN.md  MAC_BRIEF_WORKOUT_INGEST.md
docs/review/: BUILD-REPORT-auth-v1.md  BUILD-REPORT-bs007-v1.md
docs/spike/: HARDWARE_VERIFICATION_RESULTS.md  HARDWARE_VERIFICATION_RUNBOOK.md  SPIKE_CLOSED.md
integration_test/: corridor_guard_test.dart
ios/: Podfile
ios/MivaltaRustBridge.xcframework/: Info.plist
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: canonical_seed.dart  hw_telemetry.dart  main.dart  rust_engine.dart  smoketest_screen.dart
lib/copy/: axis_labels.dart  f1.dart  journey_labels.dart  level_labels.dart  today_facts_labels.dart  trust_story.dart  zone_labels.dart
lib/debug/: demo_seeder.dart  seam_log.dart
lib/models/: activity_summary.dart  benchmark_change_card.dart  biometric_series.dart  critical_power.dart  decoupling_trend.dart  fitness_trend.dart  home_data.dart  learning_status.dart  load_context.dart  metabolic_rollup.dart  metric_series.dart  metric_trend.dart  onboarding_result.dart  power_curve.dart  realized_line.dart  sleep_trend.dart  time_in_zone.dart  training_load.dart  workout_detail.dart  workout_option.dart  workout_report.dart
lib/screens/: advisor_screen.dart  app_shell.dart  auth_screen.dart  debug_swatch_exerciser.dart  explore_screen.dart  journey_screen.dart  manual_entry_screen.dart  onboarding_screen.dart  plan_screen.dart  readiness_detail_screen.dart  readiness_screen.dart  sensor_check_screen.dart  session_live_screen.dart  session_reveal_screen.dart  session_start_screen.dart  settings_screen.dart  splash_screen.dart  today_screen.dart  workout_detail_page.dart  workout_detail_screen.dart  you_screen.dart
lib/services/: benchmark_notify.dart  benchmark_sync.dart  health_ingest.dart  ingest_adapter.dart  journey_tiles_prefs.dart  morning_read_gate.dart  notification_service.dart  profile_service.dart  session_recorder.dart  today_tiles_prefs.dart  unit_prefs.dart  weather_location.dart  weather_service.dart
lib/theme/: source_tier.dart  tokens.dart  zone_names.dart
lib/widgets/: josi_presenter.dart  learning_status_card.dart  make_it_yours_sheet.dart  mivalta_bottom_nav.dart  readiness_light_field.dart  readiness_ring.dart  today_facts.dart  weather.dart  weather_place_picker.dart
review/: NEXT.md  REVIEW-LOG.md
review/_history/: README.md
review/_system/: BETA-001-roadmap.md  WIRE-001-engine-wiring.md
review/advisor/: BS-003-advisor.md  BUILD_REPORT.md  DR-018-advisor.md
review/arch/: BS-017-test-seam.md
review/auth/: BS-001b-auth-splash-sovereignty.md
review/today/: .gitignore  (+14 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
scripts/: build_ios.sh  build_ios_xcframework.sh  gen_demo_season.py
test/: activity_summary_test.dart  activity_wire_contract_test.dart  advisor_chip_mapping_test.dart  advisor_chips_test.dart  advisor_history_wire_test.dart  advisor_options_test.dart  app_shell_test.dart  benchmark_notify_test.dart  benchmark_streams_test.dart  benchmark_sync_test.dart  biometric_series_test.dart  ble_hr_measurement_test.dart  ble_hr_service_test.dart  canonical_seed_test.dart  compiled_tables_asset_test.dart  corridor_bottom_nav_test.dart  corridor_evening_swap_test.dart  corridor_josi_voice_test.dart  corridor_journey_day_record_test.dart  corridor_no_fabrication_test.dart  corridor_you_eyebrows_test.dart  critical_power_test.dart  debug_exerciser_gate_test.dart  debug_swatch_exerciser_test.dart  decision_chip_regression_test.dart  decoupling_trend_test.dart  demo_seeder_test.dart  evening_swap_test.dart  fitness_trend_test.dart  health_sync_outcome_test.dart  ingest_adapter_test.dart  josi_card_degraded_test.dart  josi_presenter_test.dart  journey_history_row_contract_test.dart  journey_recall_models_test.dart  journey_screen_test.dart  journey_tiles_prefs_test.dart  learning_status_test.dart  levels_law_source_guard_test.dart  load_context_test.dart  (+41 more)
(+72 files in other folders)
