[package]
name = "mivalta-rust-bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib → libmivalta_rust_bridge.so packaged into the APK.
# staticlib → required so flutter_rust_bridge can also build iOS later.
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Pinned to the exact pub.dev release used on the Dart side (2.12.0).
flutter_rust_bridge = "=2.12.0"

# Git-rev pin: rust-engine main @ 90dd3a4 (2026-06-10, registry v2.24). Re-pinned
# from 81bddd6 (v2.23). The 81bddd6..90dd3a4 delta is ADDITIVE on the FFI surface
# (registry diff = +AdvisorEngine::recommend_workout_with_history only; every
# method the shim already called is unchanged), plus: the 6-system energy model +
# TrainingState advisor rotation (#240) and the phase_energy_system_signatures
# card promotion (#241 — phase targets + rotation gate now card-driven, knowledge
# tables 245→247). The shim adds `recommend_workout_with_history` (the Phase-2
# tail: vault history → system rotation), so the FRB bindings in lib/src/rust/
# DO need a regen on the build executor (flutter_rust_bridge_codegen), along
# with the Cargo.lock update (regenerate where ssh resolves). The Dart facade
# call-through lands with that regen.
#
# Earlier (81bddd6) carried, over 47af641 (v2.20): +set/get_rpe_hr_drift_emission,
# M2 mental_state in the readiness_indicator psychological axis, the RPE↔HR
# drift 10th emission, and gatc-josi {state}/{session} string slots.
#
# Earlier (47af641) carried: restart-continuity, worst-state REST, decoupling
# high-intensity block + signal wiring, real-availability duration, sport-guard.
# Bump d79fbd3 -> 793bb44 carries the BLOCKER-1 dashboard honesty fix:
#   - fix(rust): dashboard surfaces unreadable state, never a fabricated
#     reading (PR #205) — get_dashboard/widgets now carry
#     `data_status: state_unavailable` instead of a fabricated "Recovered/green"
#     when persisted vault state is unreadable.
# The d79fbd3..793bb44 delta is gatc-dashboard code (#205) + docs only:
# no gatc-ffi UniFFI surface change and no gatc-vault change, so the FRB
# bindings in lib/src/rust/ and the shim in src/api.rs are unchanged (no
# regen), and the Cargo.lock update is a pure rev-SHA replacement.
#   - d79fbd3 already brought: Health Connect normalizer (#203), encrypted
#     audit ledger at rest (#200), readiness_indicator, DashboardEngine,
#     NormalizerEngine, read_readiness_history, from_persisted_state.
#
# SSH URL because rust-engine is a private repo; CI uses the
# `RUST_ENGINE_DEPLOY_KEY` secret paired with the deploy key on
# rust-engine (see `.github/workflows/smoke-build.yml`).
#
# Local-dev override: to point at a working tree on disk instead of
# refetching from git, set the local patch in `.cargo/config.toml`
# at the repo root (see README — `[patch."ssh://git@github.com/..."]`
# survives `cargo update` because patches live outside the lock file).
# Re-pinned b603b5e → 71b848b for vault-first ingest (NEXT_BUILD_BRIEF §B):
# +write_raw_observation, +mark_raw_observation_processed,
# +read_raw_observations_by_type, +read_raw_observations_by_activity,
# +read_activity_by_id, +get_workout_detail, +completed_workout_facts.
# Re-pinned 71b848b → e0262f9 (main after #268): the PERSISTED-STATE CONTINUITY
# fixes — #267 (read_viterbi_state) + #268 (read_mmp_history) stop double-encoding
# Option<String> vault reads, ending the "Missing 'current_state'" restore wipe
# that erased the learned identity on every cold start. Behaviour-only for those
# reads (no FFI signature change), but the range also sweeps #262–#266 — the build
# executor must FRB-regen IF the engine_registry surface changed in that range
# (verify on regen) and rebuild the xcframework. Cold-restart survival on the
# simulator is the semantic proof this bump exists for.
# Re-pinned e0262f9 → 7bc3f34 (main after #271): +write_biometric_from_observation
# — the engine-side UniversalObservation→VaultBiometric conversion that fixes the
# biometric-write contract bug (the normalizer output's f64 resting_hr was rejected
# by write_biometric's i32 field, so every biometric write failed). This DOES change
# the gatc-ffi UniFFI surface (new VaultEngine method), so the build executor MUST
# FRB-regen lib/src/rust/ and rebuild the xcframework. The range also sweeps the
# Viterbi-terminology rule docs (#270) and the Layer-1 quality gate (#265/#266) —
# docs/CI only.
# Re-pinned 7bc3f34 → 9f2ee86 (main after #272): the feel-axis fix — 5 normalizers
# (Apple/Health-Connect SpO2, Garmin stress, COROS fitness, Polar ANS-charge) stop
# writing a 0–1 vendor composite into the subjective `wellness` field Viterbi reads
# as 1–10, which was zeroing the psych axis + false-triggering the guardrail. Value-
# only change in gatc-normalizer (no UniFFI surface change), but it ships together
# with the #271 surface change, so the FRB-regen + xcframework rebuild is required
# for this bump regardless. Expected on-sim: readiness headline ~68 → ~77 (corruption
# removed; a zero-confidence psych axis still contributes neutral-65 — NOT "fixed").
# Re-pinned 9f2ee86 → 79b7c93 (main HEAD after #273+#274 — the 2026-06-17 bug audit):
# #273 removes the device-data fabrication cluster across all 9 normalizers (invented
# recovery/load/FTP constants → honest absence/0.0 sentinel, with an absence-propagation
# test), closes safety/correctness items S1+M2–M7 (monotony/replan/rule_resolver fail
# loud instead of permissive defaults; M3 kills a Utc::now() determinism violation; M4
# clamps the RPE-HR-drift emission weight; M7 refuses a plaintext audit ledger), splits
# M1 (Overreached → Z1 active recovery; IllnessRisk → real rest), and removes dead
# guardrails/I6 enforcers (S2). #274 adds the card-driven recovery-strides pool for
# Overreached active recovery. engine_registry verified UNCHANGED across this range
# (v2.24, zero method delta — confirmed via `git diff 9f2ee86 79b7c93 -- engine_registry.json`),
# so this bump adds NO FFI surface; the FRB-regen is still required only for the #271
# write_biometric_from_observation binding (already in 9f2ee86) that lib/src/rust/ lacks.
# Re-pinned 79b7c93 → 3db58f2 (main after #342): gatc-vault switches rusqlite to
# `bundled-sqlcipher-vendored-openssl` so SQLCipher cross-compiles for Android
# (the `openssl/crypto.h not found` smoke blocker — system OpenSSL absent on the
# target). Cargo.lock gains openssl-src + openssl-sys. engine_registry UNCHANGED
# (v2.24, zero method delta), so NO FRB regen and NO shim change — pure build fix.
# Proven green end-to-end by the Flutter `smoke` Android cross-compile (#105).
gatc-ffi = { git = "ssh://git@github.com/Bartveldkamp/mivalta-rust-engine", rev = "b7955ea" }
# PR-D: gatc-viterbi for UniversalObservation type (process_manual_observation helper)
# PR-E: also needed for normalizer integration
gatc-viterbi = { git = "ssh://git@github.com/Bartveldkamp/mivalta-rust-engine", rev = "b7955ea" }

# Day 3 needs JSON munging at the shim boundary (composing a
# SuggesterContext from engine state) and a "today" date for that
# context. Versions chosen to match what gatc-ffi already resolves to
# in the workspace; cargo will dedupe.
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
