[package]
name = "mivalta-rust-bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib → libmivalta_rust_bridge.so packaged into the APK.
# staticlib → required so flutter_rust_bridge can also build iOS later.
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Pinned to the exact pub.dev release used on the Dart side (2.12.0).
flutter_rust_bridge = "=2.12.0"

# Git-rev pin: rust-engine main @ 90dd3a4 (2026-06-10, registry v2.24). Re-pinned
# from 81bddd6 (v2.23). The 81bddd6..90dd3a4 delta is ADDITIVE on the FFI surface
# (registry diff = +AdvisorEngine::recommend_workout_with_history only; every
# method the shim already called is unchanged), plus: the 6-system energy model +
# TrainingState advisor rotation (#240) and the phase_energy_system_signatures
# card promotion (#241 — phase targets + rotation gate now card-driven, knowledge
# tables 245→247). The shim adds `recommend_workout_with_history` (the Phase-2
# tail: vault history → system rotation), so the FRB bindings in lib/src/rust/
# DO need a regen on the build executor (flutter_rust_bridge_codegen), along
# with the Cargo.lock update (regenerate where ssh resolves). The Dart facade
# call-through lands with that regen.
#
# Earlier (81bddd6) carried, over 47af641 (v2.20): +set/get_rpe_hr_drift_emission,
# M2 mental_state in the readiness_indicator psychological axis, the RPE↔HR
# drift 10th emission, and gatc-josi {state}/{session} string slots.
#
# Earlier (47af641) carried: restart-continuity, worst-state REST, decoupling
# high-intensity block + signal wiring, real-availability duration, sport-guard.
# Bump d79fbd3 -> 793bb44 carries the BLOCKER-1 dashboard honesty fix:
#   - fix(rust): dashboard surfaces unreadable state, never a fabricated
#     reading (PR #205) — get_dashboard/widgets now carry
#     `data_status: state_unavailable` instead of a fabricated "Recovered/green"
#     when persisted vault state is unreadable.
# The d79fbd3..793bb44 delta is gatc-dashboard code (#205) + docs only:
# no gatc-ffi UniFFI surface change and no gatc-vault change, so the FRB
# bindings in lib/src/rust/ and the shim in src/api.rs are unchanged (no
# regen), and the Cargo.lock update is a pure rev-SHA replacement.
#   - d79fbd3 already brought: Health Connect normalizer (#203), encrypted
#     audit ledger at rest (#200), readiness_indicator, DashboardEngine,
#     NormalizerEngine, read_readiness_history, from_persisted_state.
#
# SSH URL because rust-engine is a private repo; CI uses the
# `RUST_ENGINE_DEPLOY_KEY` secret paired with the deploy key on
# rust-engine (see `.github/workflows/smoke-build.yml`).
#
# Local-dev override: to point at a working tree on disk instead of
# refetching from git, set the local patch in `.cargo/config.toml`
# at the repo root (see README — `[patch."ssh://git@github.com/..."]`
# survives `cargo update` because patches live outside the lock file).
# Re-pinned b603b5e → 71b848b for vault-first ingest (NEXT_BUILD_BRIEF §B):
# +write_raw_observation, +mark_raw_observation_processed,
# +read_raw_observations_by_type, +read_raw_observations_by_activity,
# +read_activity_by_id, +get_workout_detail, +completed_workout_facts.
# Re-pinned 71b848b → e0262f9 (main after #268): the PERSISTED-STATE CONTINUITY
# fixes — #267 (read_viterbi_state) + #268 (read_mmp_history) stop double-encoding
# Option<String> vault reads, ending the "Missing 'current_state'" restore wipe
# that erased the learned identity on every cold start. Behaviour-only for those
# reads (no FFI signature change), but the range also sweeps #262–#266 — the build
# executor must FRB-regen IF the engine_registry surface changed in that range
# (verify on regen) and rebuild the xcframework. Cold-restart survival on the
# simulator is the semantic proof this bump exists for.
# Re-pinned e0262f9 → 7bc3f34 (main after #271): +write_biometric_from_observation
# — the engine-side UniversalObservation→VaultBiometric conversion that fixes the
# biometric-write contract bug (the normalizer output's f64 resting_hr was rejected
# by write_biometric's i32 field, so every biometric write failed). This DOES change
# the gatc-ffi UniFFI surface (new VaultEngine method), so the build executor MUST
# FRB-regen lib/src/rust/ and rebuild the xcframework. The range also sweeps the
# Viterbi-terminology rule docs (#270) and the Layer-1 quality gate (#265/#266) —
# docs/CI only.
# Re-pinned 7bc3f34 → 9f2ee86 (main after #272): the feel-axis fix — 5 normalizers
# (Apple/Health-Connect SpO2, Garmin stress, COROS fitness, Polar ANS-charge) stop
# writing a 0–1 vendor composite into the subjective `wellness` field Viterbi reads
# as 1–10, which was zeroing the psych axis + false-triggering the guardrail. Value-
# only change in gatc-normalizer (no UniFFI surface change), but it ships together
# with the #271 surface change, so the FRB-regen + xcframework rebuild is required
# for this bump regardless. Expected on-sim: readiness headline ~68 → ~77 (corruption
# removed; a zero-confidence psych axis still contributes neutral-65 — NOT "fixed").
# Re-pinned 9f2ee86 → 79b7c93 (main HEAD after #273+#274 — the 2026-06-17 bug audit):
# #273 removes the device-data fabrication cluster across all 9 normalizers (invented
# recovery/load/FTP constants → honest absence/0.0 sentinel, with an absence-propagation
# test), closes safety/correctness items S1+M2–M7 (monotony/replan/rule_resolver fail
# loud instead of permissive defaults; M3 kills a Utc::now() determinism violation; M4
# clamps the RPE-HR-drift emission weight; M7 refuses a plaintext audit ledger), splits
# M1 (Overreached → Z1 active recovery; IllnessRisk → real rest), and removes dead
# guardrails/I6 enforcers (S2). #274 adds the card-driven recovery-strides pool for
# Overreached active recovery. engine_registry verified UNCHANGED across this range
# (v2.24, zero method delta — confirmed via `git diff 9f2ee86 79b7c93 -- engine_registry.json`),
# so this bump adds NO FFI surface; the FRB-regen is still required only for the #271
# write_biometric_from_observation binding (already in 9f2ee86) that lib/src/rust/ lacks.
# Re-pinned 79b7c93 → 3db58f2 (main after #342): gatc-vault switches rusqlite to
# `bundled-sqlcipher-vendored-openssl` so SQLCipher cross-compiles for Android
# (the `openssl/crypto.h not found` smoke blocker — system OpenSSL absent on the
# target). Cargo.lock gains openssl-src + openssl-sys. engine_registry UNCHANGED
# (v2.24, zero method delta), so NO FRB regen and NO shim change — pure build fix.
# Proven green end-to-end by the Flutter `smoke` Android cross-compile (#105).
# Re-pinned b7955ea → 8b3b95a (main after #356 — dashboard removal Phase 3).
# DELETES gatc-dashboard + DashboardEngine entirely (CLAUDE.md Rule 9 / one
# engine of record per value): the engine that rebuilt a second Viterbi monitor
# + re-ran the advisor for display is gone, and a permanent guard test
# (`dashboard_pattern_stays_deleted`) keeps it out. engine_registry 16→15 engines,
# v2.26→v2.27. b7955ea is a verified ancestor of 8b3b95a; the only CODE change in
# the b7955ea..8b3b95a range is #356 (#354/#355 are docs-only), so this bump
# carries exactly the deletion. This DOES change the gatc-ffi UniFFI surface
# (the 4 DashboardEngine getters are removed), so the shim drops its dashboard
# field + construction + the 4 dead get_*_widget/get_dashboard fns, and the build
# executor MUST FRB-regen lib/src/rust/ + rebuild the xcframework. The Dart facade
# was already off DashboardEngine since Phase 2 (Flutter #112).
# Re-pinned 8b3b95a → b7264cb (main after #367 — the deterministic Josi voice
# pipeline merged through the FFI seam). Carries the whole intervening range:
# #358 ChatEngine removal, #359 trend layer (additive), #363–#365 voice pipeline
# (CommunicationPlan → microplanner → firewall → RealizedLine) + the
# `gatc_ffi::realize_advisor_line` seam, #367 HmmPosteriors removal. LARGE bump:
# it adds the realize seam (new gatc_ffi pub fn) and requires a NarrativeEngine
# in the shim handle, so the build executor MUST `cargo update`, FRB-regen
# lib/src/rust/, and rebuild the xcframework; drift-guard surfaces any
# reconciliation the trend layer / intervening FFI changes require.
# Re-pinned b7264cb → a579584 (main after the audit-fix train: #377 audit fixes +
# dead chat-history removal, #378 Viterbi-terminology purge + guard, #379
# duration-only honest-absence + determinism guard, #380 engine computes workout
# avg/max HR from a raw `hr_samples` stream — the F-ING-A engine half this Flutter
# change consumes). NO new gatc-ffi pub fn and NO shim change (the removed
# `cleanup_expired_conversation_turns` was never called by rust/src/api.rs; the
# added `hr_samples` handling is inside the existing `normalize_observation`
# path). engine_registry stays v2.29 / 14 engines. Build executor: `cargo update`
# + rebuild the xcframework (Android proven by the `smoke` CI cross-compile; iOS
# is Mac-only). No FRB-regen needed (no shim signature change).
gatc-ffi = { git = "ssh://git@github.com/Bartveldkamp/mivalta-rust-engine", rev = "a57958458ef8a0bdb74dc80b587070dc0d20a65e" }
# PR-D: gatc-viterbi for UniversalObservation type (process_manual_observation helper)
# PR-E: also needed for normalizer integration
gatc-viterbi = { git = "ssh://git@github.com/Bartveldkamp/mivalta-rust-engine", rev = "a57958458ef8a0bdb74dc80b587070dc0d20a65e" }

# Day 3 needs JSON munging at the shim boundary (composing a
# SuggesterContext from engine state) and a "today" date for that
# context. Versions chosen to match what gatc-ffi already resolves to
# in the workspace; cargo will dedupe.
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
